<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfdfd"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                >

                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="4dp"-->
                <!--android:text="Assinged To"-->
                <!--android:textColor="@color/gray"-->
                <!--android:textSize="13dp" />-->

                <!--<Spinner-->
                <!--android:id="@+id/selectUserSpinner"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="15dp"-->
                <!--android:layout_marginLeft="2dp"-->
                <!--android:layout_marginRight="2dp" />-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fullnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/fullname"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textColorHint="@color/dark_gray" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="20"
                        android:textColorHint="@color/dark_gray" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:digits="01234567890"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:maxLength="20"
                        android:textColorHint="@color/dark_gray" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/accountnoTitleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:digits="01234567890"
                        android:ems="10"
                        android:hint="@string/accountno"
                        android:inputType="number"
                        android:textColorHint="@color/dark_gray" />
                </android.support.design.widget.TextInputLayout>

                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="4dp"-->
                <!--android:text="Loss Type"-->
                <!--android:textColor="@color/gray"-->
                <!--android:textSize="13dp" />-->

                <!--<Spinner-->
                <!--android:id="@+id/BanknameSpinner"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="15dp"-->
                <!--android:layout_marginLeft="2dp"-->
                <!--android:layout_marginRight="2dp"-->
                <!--android:layout_marginTop="5dp" />-->


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/banknameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:editable="false"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/bankname"
                        android:inputType="date"
                        android:textColorHint="@color/dark_gray" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_background"
                    android:gravity="center"
                    android:onClick="addButtonOnClick"
                    android:text="@string/createuser"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_background"
                    android:gravity="center"
                    android:onClick="cancelButtonOnClick"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>